entrega/k8s-ingress-deployment.yaml
###################################
# INGRESS
###################################  
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: servicio-users
            port: 
              number: 80
      - pathType: Prefix
        path: /routes
        backend:
          service:
            name: servicio-routes
            port: 
              number: 80
      - pathType: Prefix
        path: /posts
        backend:
          service:
            name: servicio-posts
            port: 
              number: 80
      - pathType: Prefix
        path: /offers
        backend:
          service:
            name: servicio-offers
            port: 
              number: 80
      - pathType: Prefix
        path: /utilidades
        backend:
          service:
            name: servicio-utilidades
            port: 
              number: 80
      - pathType: Prefix
        path: /rf003
        backend:
          service:
            name: servicio-rf003
            port: 
              number: 80
      - pathType: Prefix
        path: /rf004
        backend:
          service:
            name: servicio-rf004
            port: 
              number: 80
      - pathType: Prefix
        path: /rf005
        backend:
          service:
            name: servicio-rf005
            port: 
              number: 80
      - pathType: Prefix
        path: /native
        backend:
          service:
            name: servicio-native
            port: 
              number: 80
      - pathType: Prefix
        path: /credit-cards
        backend:
          service:
            name: servicio-credit-cards
            port: 
              number: 80
